updated for selective targeting

--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
   </div>
   <div class="div3">
     <p>THREE - 3 - Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+    <div id="printonlyme">
+      hide everything else, but only print this.
+    </div>
   </div>
   <div class="div4">
     <p>FOUR - 4 - Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
